[project]
name = "viseval"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "llmx",
    "python-dotenv",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "CairoSVG",
    "mlcopilot",
    "lida",
    "selenium"
]
readme = "README.md"


[tool.setuptools.packages.find]
include = ["viseval*"]


[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "pre-commit",
    "black",
    "isort",
    "hatch"
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"