[project]
name = "vis-evaluator"
version = "0.0.2"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "python-dotenv",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "CairoSVG",
    "selenium",
    "llmx",
]
readme = "README.md"

[tool.setuptools.packages.find]
include = ["viseval*"]

[project.urls]
Documentation = "https://github.com/microsoft/VisEval#readme"
Issues = "https://github.com/microsoft/VisEval/issues"
Source = "https://github.com/microsoft/VisEval"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "pre-commit",
    "black",
    "isort",
    "hatch",
    "mlcopilot",
    "lida",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"